# telegram-bot-python

./: .flake8  .gitignore  main.py  pyproject.toml
client_session/: __init__.py
handlers/: __init__.py  cap_handler.py  echo_handler.py  menu_handler.py  start_handler.py  unknown_handler.py
handlers/football/: get_standing.py
telegram_bot_python/: __init__.py
tests/: test_main.py
