[tool.poetry]
name = "telegram-bot-python"
version = "0.1.0"
description = ""
authors = ["Hao Nguyen <hao@haonguyen.tech>"]
readme = "README.md"
packages = [{include = "telegram_bot_python"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
requests = "^2.29.0"
python-telegram-bot = "^20.2"
mypy = "^1.2.0"
types-requests = "^2.28.11.17"
types-pytz = "^2023.3.0.0"
pylint = "^2.17.3"
pynvim = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
